--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Jobdecoder.com vee Server",
   "main": "server.js",
   "dependencies": {
-    "async": "0.9.0",
-    "request": "2.58.0",
-    "socket.io": "1.3.3",
-    "express": "4.11.2",    
-    "mysql": "2.5.5"  
+    "async": "*",
+    "request": "*",
+    "socket.io": "*",
+    "express": "*",    
+    "mysql": "*"  
   },
-  "engine": {
-    "node": "*",
-    "npm": "*"
+  "engines": {
+    "node": ">= 0.6.0",
+    "npm": ">= 1.0.0"
   },
   "scripts": {
     "start": "node server.js",
